// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders the UI snapshot correctly 1`] = `
<h1
  className="chakra-heading css-eyyo6e"
  id="basic"
>
  Heading text
</h1>
`;

exports[`Heading renders the UI snapshot correctly 2`] = `
<h1
  className="chakra-heading css-eyyo6e"
  id="basicWithChildText"
>
  Heading text
</h1>
`;

exports[`Heading renders the UI snapshot correctly 3`] = `
<h1
  className="chakra-heading css-878tmy"
  id="customDisplaySize"
>
  Heading with Secondary size
</h1>
`;

exports[`Heading renders the UI snapshot correctly 4`] = `
<h6
  className="chakra-heading css-1g675rm"
  id="otherLevel"
>
  Heading level six
</h6>
`;

exports[`Heading renders the UI snapshot correctly 5`] = `
<h1
  className="chakra-heading css-eyyo6e"
  id="withLink"
>
  <a
    className="css-1xdhyk6"
    href="fake-url"
    id="withLink-link"
    rel={null}
    target={null}
  >
    Heading text is a link
  </a>
</h1>
`;

exports[`Heading renders the UI snapshot correctly 6`] = `
<h1
  className="chakra-heading css-eyyo6e"
  id="withCustomLink"
>
  Part of the heading text is
  <a
    className="custom-link"
    href="fake-url"
  >
    <span>
      a link
    </span>
  </a>
</h1>
`;

exports[`Heading renders the UI snapshot correctly 7`] = `
<h2
  className="chakra-heading css-1whog1v"
  id="chakra"
>
  Heading
</h2>
`;

exports[`Heading renders the UI snapshot correctly 8`] = `
<h2
  className="chakra-heading css-878tmy"
  data-testid="props"
  id="props"
>
  Heading
</h2>
`;

exports[`Heading renders the UI snapshot correctly 9`] = `
<hgroup
  aria-roledescription="Heading group"
  className="css-0"
  role="group"
>
  <p
    aria-roledescription="Subtitle"
    className="chakra-text css-rwceap"
    role="paragraph"
  >
    Overline
  </p>
  <h1
    className="chakra-heading css-878tmy"
    id="customDisplaySize"
  >
    Heading with Secondary size
  </h1>
</hgroup>
`;

exports[`Heading renders the UI snapshot correctly 10`] = `
<hgroup
  aria-roledescription="Heading group"
  className="css-0"
  role="group"
>
  <h1
    className="chakra-heading css-878tmy"
    id="customDisplaySize"
  >
    Heading with Secondary size
  </h1>
  <p
    aria-roledescription="Subtitle"
    className="chakra-text css-1lhcbgg"
    role="paragraph"
  >
    This is the subtitle
  </p>
</hgroup>
`;

exports[`Heading renders the UI snapshot correctly 11`] = `
<hgroup
  aria-roledescription="Heading group"
  className="css-0"
  role="group"
>
  <p
    aria-roledescription="Subtitle"
    className="chakra-text css-rwceap"
    role="paragraph"
  >
    Overline
  </p>
  <h1
    className="chakra-heading css-878tmy"
    id="customDisplaySize"
  >
    Heading with Secondary size
  </h1>
  <p
    aria-roledescription="Subtitle"
    className="chakra-text css-1lhcbgg"
    role="paragraph"
  >
    This is the subtitle
  </p>
</hgroup>
`;
